--- a/templates/mongodbRepo.erb
+++ b/templates/mongodbRepo.erb
@@ -1,6 +1,5 @@
-[mongodb-org-3.4]
-name=MongoDB Repository
-baseurl=https://repo.mongodb.org/yum/redhat/$releasever/mongodb-org$
-gpgcheck=1
+[mongodb-org-2.6]
+name=MongoDB 2.6 Repository
+baseurl=http://downloads-distro.mongodb.org/repo/redhat/os/x86_64/
+gpgcheck=0
 enabled=1
-
